ingress-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: stagging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: stag-wordpress.rafiqul.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-deploy
            port:
              number: 80
  
  - host: stag-rafiqul.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80

  - host: stag-sosmed.rafiqul.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: facebook
            port:
              number: 80
